<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/search_location" />

    <TextView
        android:id="@+id/textCurrentLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:minWidth="240dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/current_location_unavailable"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonGetCurrentLocation"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="16dp"
        android:padding="8dp"
        android:text="@string/get_current_location"
        android:textColor="@color/colorSecondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/distance" />

    <SeekBar
        android:id="@+id/seekbarDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />
    <!-- unit in KM. Max 10km. It seems like Large number doesn't do a thing -->

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="end"
        android:text="1km" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/secondaryText" />

        <Button
            android:id="@+id/buttonSetFilter"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/set_filter"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>